--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <button class="btn"><span style="color:#ffffff; font-weight: 700; font-family:Space Mono">BACK TO HOMEPAGE</span></button>
     </div>
 
-    BIG
+    <span>BIG</span>
 
     </div>
 
